syntax = "proto3";

option go_package = "github.ibm.com/decentralized-trust-research/scalable-committer/api/protocoordinatorservice";

package protocoordinatorservice;

import "api/protoblocktx/block_tx.proto";
import "api/protosigverifierservice/verifier.proto";

service Coordinator {
    rpc SetMetaNamespaceVerificationKey(protosigverifierservice.Key) returns (Empty);
    rpc BlockProcessing(stream protoblocktx.Block) returns (stream protoblocktx.TransactionsStatus);
    rpc SetLastCommittedBlockNumber (protoblocktx.BlockInfo) returns (Empty) {}
    rpc GetLastCommittedBlockNumber (Empty) returns (protoblocktx.BlockInfo) {}
    rpc GetNextExpectedBlockNumber (Empty) returns (protoblocktx.BlockInfo) {}
    rpc GetTransactionsStatus(protoblocktx.QueryStatus) returns (protoblocktx.TransactionsStatus);
}

message Empty {
}
